--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html><html amp lang="en"><head><meta charset="utf-8"><title></title><meta name="author" content=""><meta name="description" content=""><meta name="keywords" content=""><meta property="og:title" content=""><link rel="canonical" href="https://localhost:8000"><meta name="viewport" content="width=device-width,minimum-scale=1,maximum-scale=1,initial-scale=1"><!--*
+<!doctype html><html amp lang="en"><head><base href="/ampjucks/"><meta charset="utf-8"><title></title><meta name="author" content=""><meta name="description" content=""><meta name="keywords" content=""><meta property="og:title" content=""><link rel="canonical" href="https://localhost:8000"><meta name="viewport" content="width=device-width,minimum-scale=1,maximum-scale=1,initial-scale=1"><!--*
         *   FavIcons
         **--><meta name="mobile-web-app-capable" content="yes"><meta name="theme-color" content="#6b9ba0"><link rel="icon" href="/assets/img/favicon.ico"><!--*
         *   Fonts
